fluentd-secure.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fluentd
  namespace: weather-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fluentd
  template:
    metadata:
      labels:
        app: fluentd
    spec:
      serviceAccountName: default
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: fluentd
          image: fluent/fluentd:v1.14-debian
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          resources:
            limits:
              memory: 200Mi
              cpu: 100m
            requests:
              cpu: 50m
              memory: 100Mi
          volumeMounts:
            - name: config-volume
              mountPath: /fluentd/etc
      volumes:
        - name: config-volume
          configMap:
            name: fluentd-config
